:heavy_plus_sign: Add new pages

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,11 +1,5 @@
 import { Helmet } from 'react-helmet';
 import { Box, Divider, SEO, Text } from '../views/components';
-import AuthorList from '../views/pages/Authors/AuthorList';
-
-import authors from '../../content/author.yaml';
-
-<!-- import YAML from 'yamljs';
-const authors = YAML.parse(authorData); -->
 
 <SEO pageTitle="যোগাযোগ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
@@ -15,6 +9,11 @@ const authors = YAML.parse(authorData); -->
 </Text>
 <Divider />
 
-শীঘ্রই জানানো হবে :)
+২১৯/৪/খ, ভিপি রোড, দক্ষিণ পীরেরবাগ (৬০ ফিট ভাঙ্গাব্রীজ সংলগ্ন),
+ঢাকা-১২১৬।
+
+মোবাইল: 01914-723676
+
+মেইল: madrasatul.ilm.mail@gmail.com
 
 </Box>
