:heavy_plus_sign: Add landing page

--- a/src/pages/study-materials.mdx
+++ b/src/pages/study-materials.mdx
@@ -4,8 +4,9 @@ import { Box, Divider, SEO, Text } from '../views/components';
 <SEO pageTitle="যোগাযোগ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  যোগাযোগের ঠিকানা
+  শিক্ষাপোকরণ
 </Text>
 <Divider />
 
@@ -41,3 +42,4 @@ https://drive.google.com/drive/folders/1PBeW00frPdvCBYYjGSEMjP4mtdrtmxDy?usp=sha
 )
 
 </Box>
+
