:heavy_plus_sign: Add landing page images

--- a/src/pages/facilities.mdx
+++ b/src/pages/facilities.mdx
@@ -1,11 +1,12 @@
 import { Helmet } from 'react-helmet';
 import { Box, Divider, SEO, Text } from '../views/components';
 
-<SEO pageTitle="যোগাযোগ" />
+<SEO pageTitle="সুবিধাসমূহ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  যোগাযোগের ঠিকানা
+  সুবিধাসমূহ
 </Text>
 <Divider />
 
@@ -20,3 +21,4 @@ import { Box, Divider, SEO, Text } from '../views/components';
 - আবাসিক ছাত্রদের দেখাশোনার জন্য একজন তত্ত্বাবধয়কের অবস্থান।
 
 </Box>
+
