--- a/src/pages/study-materials.mdx
+++ b/src/pages/study-materials.mdx
@@ -22,39 +22,32 @@ import { Box, Divider, SEO, Text, BookList } from '../views/components';
       link:
         'https://drive.google.com/drive/folders/1XpkKzzDCHjktn-yLlW76NAbuPzng351f?usp=sharing',
     },
+    {
+      title: 'আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)',
+      link:
+        'https://drive.google.com/drive/folders/1uatXeL2xdi9w3EdBU0igbCryewZ_ACaY?usp=sharing',
+    },
+    {
+      title: 'আরবী বর্ণের ৪ টি রূপ ও শব্দ গঠন করা শিখি',
+      link:
+        'https://drive.google.com/file/d/1gtucIe49kgVEb3iwOxqySyQ0r_IcmfH7/view?usp=sharing',
+    },
+    {
+      title: 'বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি',
+      link:
+        'https://drive.google.com/drive/folders/1tyU8iy7VT5pbi-jUh5CHUJYOrKG9EPkz?usp=sharing',
+    },
+    {
+      title: 'হাদীস শিখি ইউশার সাথে',
+      link:
+        'https://drive.google.com/drive/folders/1PBeW00frPdvCBYYjGSEMjP4mtdrtmxDy?usp=sharing',
+    },
   ]}
 />
 
-আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি_Book
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/file/d/1N8JVAgR8-hExs_usGvLWAA43JrtXhuM0/view?usp=sharing
-)
-
-আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ_Powerpoint Presentation
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/drive/folders/1XpkKzzDCHjktn-yLlW76NAbuPzng351f?usp=sharing
-)
-
-আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)\_Powerpoint Presentation
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/drive/folders/1uatXeL2xdi9w3EdBU0igbCryewZ_ACaY?usp=sharing
-)
-
-আরবী বর্ণের ৪ টি রূপ ও শব্দ গঠন করা শিখি_Block Set
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/file/d/1gtucIe49kgVEb3iwOxqySyQ0r_IcmfH7/view?usp=sharing
-
-ব্লক সেটটি অর্ডার করতে যোগাযোগ করুন: ০১৯১১-৪৯৪৫৪৭)
-
-বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি\_ Powerpoint Presentation
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/drive/folders/1tyU8iy7VT5pbi-jUh5CHUJYOrKG9EPkz?usp=sharing
-)
-
-হাদীস শিখি ইউশার সাথে_Sound
-(গুগল ড্রাইভের নিচের লিঙ্ক টা হাইপারলিঙ্কড করা থাকবে
-https://drive.google.com/drive/folders/1PBeW00frPdvCBYYjGSEMjP4mtdrtmxDy?usp=sharing
-)
+<Text variant="h3" textAlign="center">
+  ব্লক সেটটি অর্ডার করতে যোগাযোগ করুন: ০১৯১১-৪৯৪৫৪৭)
+</Text>
 
 </Box>
 
