--- a/src/pages/study-materials/index.mdx
+++ b/src/pages/study-materials/index.mdx
@@ -1,9 +1,8 @@
 import { Helmet } from 'react-helmet';
-import { Box, Divider, SEO, Text, BookList } from '../views/components';
+import { Box, Divider, SEO, Text, BookList } from '../../views/components';
 
 <SEO pageTitle="শিক্ষাপোকরণ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
-
 
 <Text variant="h2" textAlign="center">
   শিক্ষাপোকরণ
@@ -14,40 +13,29 @@ import { Box, Divider, SEO, Text, BookList } from '../views/components';
   books={[
     {
       title: 'আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি',
-      link:
-        'https://drive.google.com/file/d/1N8JVAgR8-hExs_usGvLWAA43JrtXhuM0/view?usp=sharing',
+      link: '/study-materials/arabic-letters-with-examples',
     },
     {
       title: 'আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ',
-      link:
-        'https://drive.google.com/drive/folders/1XpkKzzDCHjktn-yLlW76NAbuPzng351f?usp=sharing',
+      link: '/study-materials/arabic-letters-with-4-form-and-pictures',
     },
     {
       title: 'আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)',
-      link:
-        'https://drive.google.com/drive/folders/1uatXeL2xdi9w3EdBU0igbCryewZ_ACaY?usp=sharing',
+      link: '/study-materials/arabic-bengali-and-english-words-with-pictures',
     },
     {
       title: 'আরবী বর্ণের ৪ টি রূপ ও শব্দ গঠন করা শিখি',
-      link:
-        'https://drive.google.com/file/d/1gtucIe49kgVEb3iwOxqySyQ0r_IcmfH7/view?usp=sharing',
+      link: '/study-materials/4-forms-of-arabic-letters-and-making-words',
     },
     {
       title: 'বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি',
-      link:
-        'https://drive.google.com/drive/folders/1tyU8iy7VT5pbi-jUh5CHUJYOrKG9EPkz?usp=sharing',
+      link: '/study-materials/know-bangla-letters-and-learn-to-read',
     },
     {
       title: 'হাদীস শিখি ইউশার সাথে',
-      link:
-        'https://drive.google.com/drive/folders/1PBeW00frPdvCBYYjGSEMjP4mtdrtmxDy?usp=sharing',
+      link: '/study-materials/learning-hadith-with-yusha',
     },
   ]}
 />
 
-<Text variant="h3" textAlign="center">
-  ব্লক সেটটি অর্ডার করতে যোগাযোগ করুন: ০১৯১১-৪৯৪৫৪৭)
-</Text>
-
 </Box>
-
