:heavy_plus_sign: Add new study material content

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -4,6 +4,7 @@ import { Box, Divider, SEO, Text } from '../views/components';
 <SEO pageTitle="যোগাযোগ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
   যোগাযোগের ঠিকানা
 </Text>
@@ -14,6 +15,7 @@ import { Box, Divider, SEO, Text } from '../views/components';
 
 মোবাইল: 01914-723676
 
-মেইল: madrasatul.ilm.mail@gmail.com
+মেইল: madrasatul.edu@gmail.com
 
 </Box>
+
