--- a/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
+++ b/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
@@ -8,19 +8,22 @@ import {
   Button,
 } from '../../views/components';
 
-<SEO pageTitle="আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)" />
+<SEO pageTitle="৩ ভাষায় শব্দ শেখা, আরবী, বাংলা ও ইংরেজী (ছবিসহ) (প্রেসেন্টেশন)" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)
+  ৩ ভাষায় শব্দ শেখা, আরবী, বাংলা ও ইংরেজী (ছবিসহ) (প্রেসেন্টেশন)
 </Text>
 <Divider />
 
-<Text>আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)</Text>
+ছোটবেলায় আমরা মানব দেহ, ফল-ফুল, পশু-পাখি কত কিছুর নাম বাংলা আর ইংরেজীতে এক সাথে মুখস্থ করেছি। এই দুই ভাষার সাথে শুধু আরবীটা জুড়ে দিলে কিন্তু আমাদের কোনো ক্ষতি হত না, বরং বাড়ত ৩ ভাষার উপই দক্ষতা।
+
+আর তাই মাদ্রাসাতুল ইল্‌ম ‘আস-সীরাত’ প্রকাশনির একটি বই এর সহযোগীতায় তৈরি করেছে ৩ ভাষার শব্দ ভান্ডার।
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/drive/folders/1uatXeL2xdi9w3EdBU0igbCryewZ_ACaY?usp=sharing"
+    href="https://drive.google.com/file/d/1bVOurJIRBmKorW0jKQe4Roon1j5ToOFt/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -29,3 +32,4 @@ import {
 </Box>
 
 </Box>
+
