--- a/src/pages/study-materials/arabic-letters-with-examples.mdx
+++ b/src/pages/study-materials/arabic-letters-with-examples.mdx
@@ -8,19 +8,22 @@ import {
   Button,
 } from '../../views/components';
 
-<SEO pageTitle="আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি" />
+<SEO pageTitle="হাত ঘুরিয়ে আরবী হরফ লিখি, সাথে শিখি দুইটা করে শব্দ (বই) " />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি
+  হাত ঘুরিয়ে আরবী হরফ লিখি, সাথে শিখি দুইটা করে শব্দ (বই)
 </Text>
 <Divider />
 
-<Text>আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি</Text>
+আরবী বর্ণ বা হরফের সাথে শিশুর প্রথম পরিচয় হোক আনন্দঘন। হরফ শিখার সাথে সাথে জানুক না দুই তিনটা শব্দ। এতে অন্যান্য হরফের সাথেও পরিচয় হবে দৃঢ় ভাবে, ইন শা আল্লাহ।
+
+আর তাই GoodWord প্রকাশনীর একটি বই এর সহযোগীতা নিয়ে ‘মাদ্রাসাতুল ইল্‌ম’ তৈরি করেছে এই বইটি। বইটি এখনই প্রিন্ট করে দিতে পারেন আপনার শিশুর হাতে।
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/file/d/1N8JVAgR8-hExs_usGvLWAA43JrtXhuM0/view?usp=sharing"
+    href="https://drive.google.com/file/d/1N0UdMjFIqOYgtKVkIRGrCvSFH1jqgSLp/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -29,3 +32,4 @@ import {
 </Box>
 
 </Box>
+
