--- a/src/pages/study-materials/learning-hadith-with-yusha.mdx
+++ b/src/pages/study-materials/learning-hadith-with-yusha.mdx
@@ -11,16 +11,18 @@ import {
 <SEO pageTitle="হাদীস শিখি ইউশার সাথে" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
   হাদীস শিখি ইউশার সাথে
 </Text>
 <Divider />
 
-<Text>হাদীস শিখি ইউশার সাথে</Text>
+বইটি প্রকাশনার অপেক্ষায় আছে। বইটিতে যে কয়টি হাদীস আছে তার সঠিক উচ্চারণ [এখান](https://drive.google.com/drive/folders/1ODWkq6A8WHr6sRA1_BuqMDO5AnOWN12p?usp=sharing)
+থেকে শুনে নিতে পারেন।
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/drive/folders/1PBeW00frPdvCBYYjGSEMjP4mtdrtmxDy?usp=sharing"
+    href="https://drive.google.com/drive/folders/1ODWkq6A8WHr6sRA1_BuqMDO5AnOWN12p?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -29,3 +31,4 @@ import {
 </Box>
 
 </Box>
+
