--- a/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
@@ -8,19 +8,25 @@ import {
   Button,
 } from '../../views/components';
 
-<SEO pageTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ" />
+<SEO pageTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন) " />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ
+  আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন)
 </Text>
 <Divider />
 
-<Text>আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ</Text>
+আনিস সাহেব প্রতিদিন বাচ্চাকে ‘কায়দা’ পড়ান। অনেক কষ্টে একসময় শিখিয়ে ফেললেন ২৯ টি আরবী বর্ণ। একদিন সূরা ‘ফীল’ পড়ছিলেন আনিস সাহেব। বাচ্চাকে فيل (ফীল- হাতি) শব্দটি দেখিয়ে বললেন, “দেখেছ বাবা, ف, ي আর ل মিলে হয়েছে فيل।
+বাচ্চা জবাব দেয়, “আব্বু, আমি তো فيل শব্দের মাঝে ي আর ف খোঁজে পাচ্ছি না!”
+
+সমস্যাটা কোথায় বোঝতে পারলেন আনিস সাহেব। আরবী বর্ণের স্বতন্ত্র রূপ ছাড়াও শব্দের শুরু, মাঝে ও শেষের জন্য রয়েছে আরো ৩টি রূপ। অর্থাৎ, এক হরফের মোট ৪টি ডাইমেনশন (4D)।
+
+‘মাদ্রাসাতুল ইল্‌ম’ এর প্রেসেন্টেশনে এনিমেশন দিয়ে একই সাথে দেখানো হয়েছে আরবী বর্ণের ৪টি রূপ, সাথে আছে দুইটি করে উদাহরণস্বরূপ শব্দ, আর ব্যাকগ্রাউন্ডে সাউন্ড তো থাকছেই।
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/drive/folders/1XpkKzzDCHjktn-yLlW76NAbuPzng351f?usp=sharing"
+    href="https://drive.google.com/file/d/1XIsxj2_57td4CH5wtF1n9hUDSTFl6pjl/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -29,3 +35,4 @@ import {
 </Box>
 
 </Box>
+
