--- a/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
+++ b/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
@@ -11,27 +11,19 @@ import {
 <SEO pageTitle="বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
-  বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি
+  বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি (প্রেসেন্টেশন)
 </Text>
 <Divider />
 
-<Text>
-  শুধু বাংলা বর্ণমালার বই দিয়ে বাচ্চাদের বাংলা শিখানো ইদানিং খুব কষ্টসাধ্য বিষয়।
-  তাই আমরা তৈরি করেছি কিছু মজার প্রেসেন্টেশন।{' '}
-  <strong>এনিমেশন+সাউন্ড+গেইম</strong> থাকায় বাচ্চারা বেশ মজা করে এখন শিখছে
-  বাংলা বর্ণমালা ও শব্দ গঠন প্রক্রিয়া।
-</Text>
+শুধু বাংলা বর্ণমালার বই দিয়ে বাচ্চাদের বাংলা শিখানো ইদানিং খুব কষ্টসাধ্য বিষয়। তাই আমরা তৈরি করেছি কিছু মজার প্রেসেন্টেশন। এনিমেশন+সাউন্ড+গেইম থাকায় বাচ্চারা বেশ মজা করে এখন শিখতে পারবে বাংলা বর্ণমালা ও শব্দ গঠন প্রক্রিয়া, ইন শা আল্লাহ।
 
-<Text>
-  এখানে আছে মোট ১১ টি প্রেসেন্টেশন। যার প্রথম ৯ টি প্রেসেন্টেশন দেখালে বাচ্চারা
-  শিখবে বাংলা ৫০ টি বর্ণ, এবং বাকি ২ টা প্রেসেন্টেশন দেখালে বাচ্চারা শিখে যাবে
-  কিভাবে শব্দ তৈরি করতে হয়, ইন শা আল্লাহ।
-</Text>
+এখানে আছে মোট ১১ টি প্রেসেন্টেশন। যার প্রথম ৯ টি প্রেসেন্টেশন দেখালে বাচ্চারা শিখবে বাংলা ৫০ টি বর্ণ, এবং বাকি ২ টা প্রেসেন্টেশন দেখালে বাচ্চারা শিখে যাবে কিভাবে শব্দ তৈরি করতে হয়, ইন শা আল্লাহ।
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/drive/folders/1tyU8iy7VT5pbi-jUh5CHUJYOrKG9EPkz?usp=sharing"
+    href="https://drive.google.com/drive/folders/114POcFTp1HYR4joi2mlXvn35E0QHTgOe?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -40,3 +32,4 @@ import {
 </Box>
 
 </Box>
+
