--- a/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
+++ b/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
@@ -8,7 +8,7 @@ import {
   Button,
 } from '../../views/components';
 
-<SEO pageTitle="৩ ভাষায় শব্দ শেখা, আরবী, বাংলা ও ইংরেজী (ছবিসহ) (প্রেসেন্টেশন)" />
+<SEO pageTitle="৩ ভাষায় শব্দ শেখা, আরবী, বাংলা ও ইংরেজী (ছবিসহ) (প্রেসেন্টেশন)" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
 
