--- a/src/pages/study-materials/index.mdx
+++ b/src/pages/study-materials/index.mdx
@@ -4,6 +4,7 @@ import { Box, Divider, SEO, Text, BookList } from '../../views/components';
 <SEO pageTitle="শিক্ষাপোকরণ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
+
 <Text variant="h2" textAlign="center">
   শিক্ষাপোকরণ
 </Text>
@@ -12,23 +13,19 @@ import { Box, Divider, SEO, Text, BookList } from '../../views/components';
 <BookList
   books={[
     {
-      title: 'আরবী বর্ণ ও সাথে উদাহরণস্বরূপ ছবি',
+      title: 'হাত ঘুরিয়ে আরবী হরফ লিখি, সাথে শিখি দুইটা করে শব্দ (বই)',
       link: '/study-materials/arabic-letters-with-examples',
     },
     {
-      title: 'আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ',
+      title: 'আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন)',
       link: '/study-materials/arabic-letters-with-4-form-and-pictures',
     },
     {
-      title: 'আরবী, বাংলা ও ইংরেজী শব্দ (ছবিসহ)',
+      title: '৩ ভাষায় শব্দ শেখা, আরবী, বাংলা ও ইংরেজী (ছবিসহ) (প্রেসেন্টেশন)',
       link: '/study-materials/arabic-bengali-and-english-words-with-pictures',
     },
     {
-      title: 'আরবী বর্ণের ৪ টি রূপ ও শব্দ গঠন করা শিখি',
-      link: '/study-materials/4-forms-of-arabic-letters-and-making-words',
-    },
-    {
-      title: 'বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি',
+      title: 'বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি (প্রেসেন্টেশন)',
       link: '/study-materials/know-bangla-letters-and-learn-to-read',
     },
     {
@@ -39,3 +36,4 @@ import { Box, Divider, SEO, Text, BookList } from '../../views/components';
 />
 
 </Box>
+
