:arrow_up_down: Update post

--- a/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
+++ b/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
@@ -17,9 +17,16 @@ import {
 </Text>
 <Divider />
 
-ছোটবেলায় আমরা মানব দেহ, ফল-ফুল, পশু-পাখি কত কিছুর নাম বাংলা আর ইংরেজীতে এক সাথে মুখস্থ করেছি। এই দুই ভাষার সাথে শুধু আরবীটা জুড়ে দিলে কিন্তু আমাদের কোনো ক্ষতি হত না, বরং বাড়ত ৩ ভাষার উপই দক্ষতা।
+<Text>
+  ছোটবেলায় আমরা মানব দেহ, ফল-ফুল, পশু-পাখি কত কিছুর নাম বাংলা আর ইংরেজীতে এক
+  সাথে মুখস্থ করেছি। এই দুই ভাষার সাথে শুধু আরবীটা জুড়ে দিলে কিন্তু আমাদের কোনো
+  ক্ষতি হত না, বরং বাড়ত ৩ ভাষার উপই দক্ষতা।
+</Text>
 
-আর তাই মাদ্রাসাতুল ইল্‌ম ‘আস-সীরাত’ প্রকাশনির একটি বই এর সহযোগীতায় তৈরি করেছে ৩ ভাষার শব্দ ভান্ডার।
+<Text>
+  আর তাই মাদ্রাসাতুল ইল্‌ম ‘আস-সীরাত’ প্রকাশনির একটি বই এর সহযোগীতায় তৈরি করেছে
+  ৩ ভাষার শব্দ ভান্ডার।
+</Text>
 
 <Box textAlign="center">
   <a
