➕ Add new email and change url

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -15,7 +15,7 @@ import { Box, Divider, SEO, Text } from '../views/components';
 
 মোবাইল: 01914-723676
 
-মেইল: madrasatul.edu@gmail.com
+মেইল: madrasatulilm.contact@gmail.com
 
 </Box>
 
