--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,5 +1,5 @@
 import { Helmet } from 'react-helmet';
-import { Box, Divider, SEO, Text } from '../views/components';
+import { Box, Breadcrumb, Divider, SEO, Text } from '../views/components';
 
 <SEO pageTitle="যোগাযোগ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
@@ -8,6 +8,13 @@ import { Box, Divider, SEO, Text } from '../views/components';
 <Text variant="h2" textAlign="center">
   যোগাযোগের ঠিকানা
 </Text>
+<Divider />
+<Breadcrumb
+  links={[
+    { url: '/', name: 'নীড়পাতা' },
+    { url: '/contact/', name: 'যোগাযোগ', isCurrentPage: true },
+  ]}
+/>
 <Divider />
 
 ২১৯/৪/খ, ভিপি রোড, দক্ষিণ পীরেরবাগ (৬০ ফিট ভাঙ্গাব্রীজ সংলগ্ন),
