--- a/src/pages/finance.mdx
+++ b/src/pages/finance.mdx
@@ -1,5 +1,5 @@
 import { Helmet } from 'react-helmet';
-import { Box, Divider, SEO, Text } from '../views/components';
+import { Box, Breadcrumb, Divider, SEO, Text } from '../views/components';
 
 <SEO pageTitle="আর্থিক ব্যাপার" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
@@ -8,6 +8,13 @@ import { Box, Divider, SEO, Text } from '../views/components';
 <Text variant="h2" textAlign="center">
   আর্থিক ব্যাপার
 </Text>
+<Divider />
+<Breadcrumb
+  links={[
+    { url: '/', name: 'নীড়পাতা' },
+    { url: '/finance/', name: 'আর্থিক ব্যাপার', isCurrentPage: true },
+  ]}
+/>
 <Divider />
 
 ### এখানে পড়তে খরচ কত হবে
