--- a/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
@@ -7,11 +7,11 @@ import {
   Text,
   BookList,
   Button,
+  Video,
 } from '../../views/components';
 
 <SEO pageTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন) " />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
-
 
 <Text variant="h2" textAlign="center">
   আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন)
@@ -21,11 +21,6 @@ import {
   links={[
     { url: '/', name: 'নীড়পাতা' },
     { url: '/study-materials/', name: 'শিক্ষাপোকরণ' },
-    {
-      url: '/arabic-letters-with-4-form-and-pictures/',
-      name: 'আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ',
-      isCurrentPage: true,
-    },
   ]}
 />
 <Divider />
@@ -36,6 +31,15 @@ import {
 সমস্যাটা কোথায় বোঝতে পারলেন আনিস সাহেব। আরবী বর্ণের স্বতন্ত্র রূপ ছাড়াও শব্দের শুরু, মাঝে ও শেষের জন্য রয়েছে আরো ৩টি রূপ। অর্থাৎ, এক হরফের মোট ৪টি ডাইমেনশন (4D)।
 
 ‘মাদ্রাসাতুল ইল্‌ম’ এর প্রেসেন্টেশনে এনিমেশন দিয়ে একই সাথে দেখানো হয়েছে আরবী বর্ণের ৪টি রূপ, সাথে আছে দুইটি করে উদাহরণস্বরূপ শব্দ, আর ব্যাকগ্রাউন্ডে সাউন্ড তো থাকছেই।
+
+<Video
+  videoSrcURL="https://www.youtube.com/embed/4GoAow6_4Ec"
+  videoTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (উচ্চারণ সহ)"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  mb={4}
+/>
 
 <Box textAlign="center">
   <a
@@ -48,4 +52,3 @@ import {
 </Box>
 
 </Box>
-
