--- a/src/pages/finance/business-of-madrassa/4d-block.mdx
+++ b/src/pages/finance/business-of-madrassa/4d-block.mdx
@@ -7,6 +7,7 @@ import {
   Flex,
   SEO,
   Text,
+  Video,
 } from '../../../views/components';
 
 <SEO pageTitle="4D Block" />
@@ -46,11 +47,14 @@ import {
 
 “ঠিক, এবার তাহলে ف, ي আর ل তিনটি হরফ এর লেজে-লেজে কানেকশন দিয়ে فيل বানাও তো।”
 
-<Box textAlign="center">
-  <video width="720" height="405" controls>
-    <source src="/assets/videos/4d-block.mp4" type="video/mp4" />
-  </video>
-</Box>
+<Video
+  videoSrcURL="https://www.youtube.com/embed/p5BkpyPYprA"
+  videoTitle="আরবী 4D হরফ, Arabic 4 Dimensional Alphabets"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  mb={4}
+/>
 
 **মূল্য:** ৪৩০ টাকা (প্রাইস ফ্লেক্সিবল, কেউ কম দিতে চাইলে মাদ্রাসা কম প্রফিট করবে।)
 
