Fix video responsive issue

--- a/src/pages/finance/business-of-madrassa/index.mdx
+++ b/src/pages/finance/business-of-madrassa/index.mdx
@@ -21,6 +21,6 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../../views/components';
 - মধু
 - ঘি
 - তেল
-- 4D Block
+- <Link to="./4d-block">4D Block</Link>
 
 </Box>
