--- a/src/pages/finance/business-of-madrassa/4d-block.mdx
+++ b/src/pages/finance/business-of-madrassa/4d-block.mdx
@@ -56,17 +56,17 @@ import {
   mb={4}
 />
 
-**মূল্য:** ৪৩০ টাকা (প্রাইস ফ্লেক্সিবল, কেউ কম দিতে চাইলে মাদ্রাসা কম প্রফিট করবে।)
+**মূল্য**: ৪৩০ টাকা (প্রাইস ফ্লেক্সিবল, কেউ কম দিতে চাইলে মাদ্রাসা কম প্রফিট করবে।)
 
-**হোম ডেলিভারি:** ১০০ টাকা বা তার কম (দূরত্ব বুঝে)।
+**হোম ডেলিভারি**: ১০০ টাকা বা তার কম (দূরত্ব বুঝে)।
 
-টাকা পাঠানোর জন:
+টাকা পাঠানোর জন্য:
 
 - সরাসরি ডেলিভারি ম্যান এর কাছে,
 - বা নগদ একাউন্টে 01911494547
 - বা ব্যাংক একাউন্টে (20502240201192211, IBBL Agargaon Branch)
 
-যোগাযোগ: WhatsApp & Call: 01911-494547<br />
-Mail: fahmi.buet@gmail.com
+**যোগাযোগ**: WhatsApp & Call: 01911-494547<br />
+**Mail**: fahmi.buet@gmail.com
 
 </Box>
