➕ Add links to resources

--- a/src/pages/study-materials/learning-hadith-with-yusha.mdx
+++ b/src/pages/study-materials/learning-hadith-with-yusha.mdx
@@ -7,6 +7,7 @@ import {
   Text,
   BookList,
   Button,
+  Video,
 } from '../../views/components';
 
 <SEO pageTitle="হাদীস শিখি ইউশার সাথে" />
@@ -24,16 +25,55 @@ import {
 />
 <Divider />
 
-বইটি প্রকাশনার অপেক্ষায় আছে। বইটিতে যে কয়টি হাদীস আছে তার সঠিক উচ্চারণ [এখান](https://drive.google.com/drive/folders/1ODWkq6A8WHr6sRA1_BuqMDO5AnOWN12p?usp=sharing)
-থেকে শুনে নিতে পারেন।
+<img src="/assets/images/book_mockup2.png" alt="হাদীস শিখি ইউশার সাথে" />
 
-<Box textAlign="center">
+<Video
+  videoSrcURL="/assets/videos/hadith-with-yusha.mp4"
+  videoTitle="হাদীস শিখি ইউশার সাথে"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  mb={4}
+  mt={4}
+  bg="white"
+/>
+
+<Box textAlign="center" mb={4}>
+  <div>
+    <h4>সবগুলো হাদিসের শুদ্ধ উচ্চারণ শুনতে ভিজিট করুন</h4>
+  </div>
   <a
-    href="https://drive.google.com/drive/folders/1ODWkq6A8WHr6sRA1_BuqMDO5AnOWN12p?usp=sharing"
+    href="https://drive.google.com/drive/folders/1ulGJalb_D9Ulxv_KZUwfVfzm8bLstXWh?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
-    <Button variant="primary">ডাউনলোড</Button>
+    <Button variant="primary">হাদীসগুলোর শুদ্ধ উচ্চারণ</Button>
+  </a>
+</Box>
+
+<Box textAlign="center" mb={4}>
+  <div>
+    <h4>বইয়ে দেয়া কুইজের উত্তরগুলো জানতে ভিজিট করুন</h4>
+  </div>
+  <a
+    href="https://drive.google.com/drive/folders/1WUZpECLS1Maz6kxQlm8HL-nnXPIuC4La?usp=sharing"
+    target="_blank"
+    rel="noreferrer noopener"
+  >
+    <Button variant="primary">কুইজের উত্তর</Button>
+  </a>
+</Box>
+
+<Box textAlign="center" mb={4}>
+  <div>
+    <h4>বইটি কিনতে ভিজিট করুন</h4>
+  </div>
+  <a
+    href="https://www.facebook.com/madrasatulilm/"
+    target="_blank"
+    rel="noreferrer noopener"
+  >
+    <Button variant="primary">https://www.facebook.com/madrasatulilm/</Button>
   </a>
 </Box>
 
