Refactor book page

--- a/src/pages/study-materials/learning-hadith-with-yusha.mdx
+++ b/src/pages/study-materials/learning-hadith-with-yusha.mdx
@@ -28,22 +28,18 @@ import {
 <img src="/assets/images/book_mockup2.png" alt="হাদীস শিখি ইউশার সাথে" />
 
 <Video
-  videoSrcURL="/assets/videos/hadith-with-yusha.mp4"
+  videoSrcURL="https://www.youtube.com/embed/ALAvfpkkTlw"
   videoTitle="হাদীস শিখি ইউশার সাথে"
   frameWidth="720px"
   frameHeight="504px"
   width="100%"
   mb={4}
   mt={4}
-  bg="white"
 />
 
 <Box textAlign="center" mb={4}>
-  <div>
-    <h4>সবগুলো হাদিসের শুদ্ধ উচ্চারণ শুনতে ভিজিট করুন</h4>
-  </div>
   <a
-    href="https://drive.google.com/drive/folders/1ulGJalb_D9Ulxv_KZUwfVfzm8bLstXWh?usp=sharing"
+    href="https://www.youtube.com/watch?v=ALAvfpkkTlw"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -52,28 +48,12 @@ import {
 </Box>
 
 <Box textAlign="center" mb={4}>
-  <div>
-    <h4>বইয়ে দেয়া কুইজের উত্তরগুলো জানতে ভিজিট করুন</h4>
-  </div>
   <a
     href="https://drive.google.com/drive/folders/1WUZpECLS1Maz6kxQlm8HL-nnXPIuC4La?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
-    <Button variant="primary">কুইজের উত্তর</Button>
-  </a>
-</Box>
-
-<Box textAlign="center" mb={4}>
-  <div>
-    <h4>বইটি কিনতে ভিজিট করুন</h4>
-  </div>
-  <a
-    href="https://www.facebook.com/madrasatulilm/"
-    target="_blank"
-    rel="noreferrer noopener"
-  >
-    <Button variant="primary">https://www.facebook.com/madrasatulilm/</Button>
+    <Button variant="primary">বইয়ে দেয়া কুইজের উত্তর</Button>
   </a>
 </Box>
 
