add library page

--- a/src/pages/finance/business-of-madrassa/index.mdx
+++ b/src/pages/finance/business-of-madrassa/index.mdx
@@ -22,5 +22,6 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../../views/components';
 - ঘি
 - তেল
 - <Link to="./4d-block">4D Block</Link>
+- <Link to="./library">মাদ্রাসাস্থ পাঠাগারের বইসমূহ</Link>
 
 </Box>
