--- a/src/pages/finance/business-of-madrassa/4d-block.mdx
+++ b/src/pages/finance/business-of-madrassa/4d-block.mdx
@@ -66,7 +66,7 @@ import {
 - বা নগদ একাউন্টে 01911494547
 - বা ব্যাংক একাউন্টে (20502240201192211, IBBL Agargaon Branch)
 
-**যোগাযোগ**: WhatsApp & Call: 01911-494547<br />
-**Mail**: fahmi.buet@gmail.com
+**যোগাযোগ**: WhatsApp & Call: 01914-723676<br />
+**Mail**: madrasatulilm.contact@gmail.com
 
 </Box>
