➕ add new download link

--- a/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
@@ -43,7 +43,7 @@ import {
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/file/d/1XIsxj2_57td4CH5wtF1n9hUDSTFl6pjl/view?usp=sharing"
+    href="https://docs.google.com/presentation/d/1lXoT2QfPJVuAtsQznsOM04FvvDzyw0yy/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true"
     target="_blank"
     rel="noreferrer noopener"
   >
