--- a/src/pages/finance/business-of-madrassa/index.mdx
+++ b/src/pages/finance/business-of-madrassa/index.mdx
@@ -2,10 +2,10 @@ import { Helmet } from 'react-helmet';
 import { Link } from 'gatsby';
 import { Box, Breadcrumb, Divider, SEO, Text } from '../../../views/components';
 
-<SEO pageTitle="মাদ্রাসায় আপনার সাদাকাহ ও যাকাতে" />
+<SEO pageTitle="মাদরাসাতুল ইলম ফুড এন্ড বুক শপ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
   <Text variant="h2" textAlign="center">
-    মাদ্রাসায় আপনার সাদাকাহ ও যাকাত
+    মাদরাসাতুল ইলম ফুড এন্ড বুক শপ
   </Text>
   <Divider />
   <Breadcrumb
@@ -22,6 +22,6 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../../views/components';
 - ঘি
 - তেল
 - <Link to="./4d-block">4D Block</Link>
-- <Link to="./library">মাদ্রাসাস্থ পাঠাগারের বইসমূহ</Link>
+- <Link to="./library">বুক শপের বইসমূহ</Link>
 
 </Box>
