➕ add new title

--- a/src/pages/finance/index.mdx
+++ b/src/pages/finance/index.mdx
@@ -27,7 +27,7 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../views/components';
   <div>
     ৩.{' '}
     <Link to="/finance/business-of-madrassa/">
-      মাদ্রাসার আয়ের উৎস যখন ব্যবসা
+      মাদরাসাতুল ইলম ফুড এন্ড বুক শপ
     </Link>
   </div>
 </Box>
