➕ add new pages

--- a/src/pages/finance/business-of-madrassa/index.mdx
+++ b/src/pages/finance/business-of-madrassa/index.mdx
@@ -18,10 +18,14 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../../views/components';
 
 মাদ্রাসাতুল ইল্‌ম এর সাথে জড়িত কিছু দ্বীনি ভাই সরাসরি উৎপাদন স্থল থেকে সংগ্রহ করেন বিভিন্ন পণ্য যেমন- মধু, তেল, ঘি, ইত্যাদি। পন্যগুলো সম্পর্কে জানতে ও অর্ডার করতে নিচে ক্লিক করুন।
 
-- মধু
-- ঘি
-- তেল
-- <Link to="./4d-block">4D Block</Link>
-- <Link to="./library">বুক শপের বইসমূহ</Link>
+- <Link to="./honey/">মধু</Link>
+- <Link to="./ghee/">ঘি</Link>
+- <Link to="./mustard-oil/">তেল</Link>
+- <Link to="./4d-block/">4D Block</Link>
+- <Link to="./library/">বুক শপের বইসমূহ</Link>
+
+<Box py={3}>
+  <img src={`/assets/images/কালোজিরা-বরই-ঘি-সরিশা.jpg`} alt="মধু (বরই)" />
+</Box>
 
 </Box>
