--- a/src/pages/finance/business-of-madrassa/mustard-oil.mdx
+++ b/src/pages/finance/business-of-madrassa/mustard-oil.mdx
@@ -19,7 +19,7 @@ import {
     links={[
       { url: '/', name: 'নীড়পাতা' },
       { url: '/finance/', name: 'আর্থিক ব্যাপার' },
-      { url: '/finance/business-of-madrassa/', name: 'মাদ্রাসার আয়ের উৎস যখন ব্যবসা' }
+      { url: '/finance/business-of-madrassa/', name: 'মাদরাসাতুল ইলম ফুড এন্ড বুক শপ' }
     ]}
   />
   <Divider />
