--- a/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
+++ b/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
@@ -28,6 +28,8 @@ import {
 
 এখানে আছে মোট ১১ টি প্রেসেন্টেশন। যার প্রথম ৯ টি প্রেসেন্টেশন দেখালে বাচ্চারা শিখবে বাংলা ৫০ টি বর্ণ, এবং বাকি ২ টা প্রেসেন্টেশন দেখালে বাচ্চারা শিখে যাবে কিভাবে শব্দ তৈরি করতে হয়, ইন শা আল্লাহ।
 
+নির্ধারিত ফি দিয়ে প্রেসেন্টেশনগুলো ডাউনলোড করতে কল বা হোয়াটস-আপ করুন এখানে: 01911-494547
+
 <Box textAlign="center">
   <a
     href="https://drive.google.com/drive/folders/114POcFTp1HYR4joi2mlXvn35E0QHTgOe?usp=sharing"
