updated payment info

--- a/src/pages/finance/your-donation-to-madrassa.mdx
+++ b/src/pages/finance/your-donation-to-madrassa.mdx
@@ -24,7 +24,7 @@ IBBL A/C No.: 20501910202485403 (A/C Name: Khondakar Joynal Abedin/Md. Saiful Is
 
 DBBL A/C No.: 1051020009012 (A/C Name: Faisal Imtiaz, Branch Name: MOTIJHEEL FOREIGN EXCHANGE BRANCH, Routing No: 090274309, Swift Code: DBBLBDDH105)
 
-Rocket, Bkash, Nagad No.: 013 099 143 66
+Rocket, Bkash, Nagad No.: 013 099 143 66 (Personal)
 
 আল্লাহ বলেন:
 
