➕ add new changes

--- a/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
@@ -10,11 +10,11 @@ import {
   Video,
 } from '../../views/components';
 
-<SEO pageTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন) " />
+<SEO pageTitle="আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
 <Text variant="h2" textAlign="center">
-  আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন)
+  আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)
 </Text>
 <Divider />
 <Breadcrumb
@@ -43,11 +43,11 @@ import {
 
 <Box textAlign="center">
   <a
-    href="https://docs.google.com/presentation/d/1lXoT2QfPJVuAtsQznsOM04FvvDzyw0yy/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true"
+    href="https://drive.google.com/drive/folders/1viooKZcy1xAciEhBVzWYZ5GgWNNAbTei?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
-    <Button variant="primary">ডাউনলোড</Button>
+    <Button variant="primary">সকল প্রেসেন্টেশন ডাউনলোড</Button>
   </a>
 </Box>
 
