--- a/src/pages/study-materials/index.mdx
+++ b/src/pages/study-materials/index.mdx
@@ -11,7 +11,6 @@ import {
 <SEO pageTitle="শিক্ষাপোকরণ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
-
 <Text variant="h2" textAlign="center">
   শিক্ষাপোকরণ
 </Text>
@@ -31,7 +30,7 @@ import {
       link: '/study-materials/arabic-letters-with-examples',
     },
     {
-      title: 'আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (প্রেসেন্টেশন)',
+      title: "আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)",
       link: '/study-materials/arabic-letters-with-4-form-and-pictures',
     },
     {
@@ -50,4 +49,3 @@ import {
 />
 
 </Box>
-
