আরবির শুরু (বাচ্চাদের আরবি শেখার বই)

--- a/src/pages/study-materials/index.mdx
+++ b/src/pages/study-materials/index.mdx
@@ -45,6 +45,10 @@ import {
       title: 'হাদীস শিখি ইউশার সাথে',
       link: '/study-materials/learning-hadith-with-yusha',
     },
+    {
+      title: 'আরবির শুরু (বাচ্চাদের আরবি শেখার বই)',
+      link: '/study-materials/arbir-guru',
+    }
   ]}
 />
 
