--- a/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
+++ b/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
@@ -7,6 +7,7 @@ import {
   Text,
   BookList,
   Button,
+  Video,
 } from '../../views/components';
 
 <SEO pageTitle="বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি" />
@@ -39,5 +40,14 @@ import {
     <Button variant="primary">ডাউনলোড</Button>
   </a>
 </Box>
+
+<Video
+  videoSrcURL="https://www.youtube.com/embed/iMM37fLLDp0"
+  videoTitle="কীভাবে বাচ্চাকে বাংলা পড়তে শেখাবেন"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  my={4}
+/>
 
 </Box>
