--- a/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
+++ b/src/pages/study-materials/know-bangla-letters-and-learn-to-read.mdx
@@ -42,7 +42,7 @@ import {
 </Box>
 
 <Video
-  videoSrcURL="https://www.youtube.com/embed/iMM37fLLDp0"
+  videoSrcURL="https://www.youtube.com/embed/FArIDxr45jM"
   videoTitle="কীভাবে বাচ্চাকে বাংলা পড়তে শেখাবেন"
   frameWidth="720px"
   frameHeight="504px"
