fix: refactor description

--- a/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
+++ b/src/pages/study-materials/arabic-bengali-and-english-words-with-pictures.mdx
@@ -31,8 +31,21 @@ import {
 </Text>
 
 <Text>
-  আর তাই মাদ্রাসাতুল ইল্‌ম ‘আস-সীরাত’ প্রকাশনির একটি বই এর সহযোগীতায় তৈরি করেছে
-  ৩ ভাষার শব্দ ভান্ডার।
+  আর তাই মাদ্রাসাতুল ইল্‌ম প্রেসেন্টেশন আকারে (ছবি সহ) তৈরি করেছে ৩ ভাষার শব্দ
+  ভান্ডার। ৩ ভাষা বললেও বেশিরভাগ প্রেসেন্টেশনেই বাংলা শব্দ ব্যবহার করা হয় নি।
+  কারণ, এটা ছবি দেখেই বোঝা যায়।
+</Text>
+
+<Text>
+  বাংলা ব্যবহার না করার আরেকটা কারণ, অনেকেই বাচ্চাকে এভাবে পড়ান, "Cat মানে
+  বিড়াল", যা আসলে ভাষা শেখার সঠিক পদ্ধতি নয়। বরং, একটা বিড়ালের ছবি দেখিয়ে বলা
+  যেতে পারে, "It is a Cat", আরবীর ক্ষেত্রে বলবেন, "هٰذَا قِطٌّ"।
+</Text>
+
+<Text>
+  এভাবে প্রশ্নও করা যেতে পারে, ইংরেজীর ক্ষেত্রে, "What is this?" এবং আরবীর
+  ক্ষেত্রে "مَا هَذَا؟"। তাহলেই বাচ্চারা প্রতিটি ভাষা আলাদা আলাদা ভাবে শিখবে, ইন
+  শা আল্লাহ।
 </Text>
 
 <Box textAlign="center">
