--- a/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic-letters-with-4-form-and-pictures.mdx
@@ -33,7 +33,7 @@ import {
 ‘মাদ্রাসাতুল ইল্‌ম’ এর প্রেসেন্টেশনে এনিমেশন দিয়ে একই সাথে দেখানো হয়েছে আরবী বর্ণের ৪টি রূপ, সাথে আছে দুইটি করে উদাহরণস্বরূপ শব্দ, আর ব্যাকগ্রাউন্ডে সাউন্ড তো থাকছেই।
 
 <Video
-  videoSrcURL="https://www.youtube.com/embed/4GoAow6_4Ec"
+  videoSrcURL="https://www.youtube.com/embed/videoseries?list=PLN6GIGge5un8mSh1HcZzXU2CogpV8TGTM"
   videoTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (উচ্চারণ সহ)"
   frameWidth="720px"
   frameHeight="504px"
