feat: add new pages

--- a/src/pages/study-materials/arabic/arabic-letters-with-examples.mdx
+++ b/src/pages/study-materials/arabic/arabic-letters-with-examples.mdx
@@ -7,7 +7,7 @@ import {
   Text,
   BookList,
   Button,
-} from '../../views/components';
+} from '../../../views/components';
 
 <SEO pageTitle="হাত ঘুরিয়ে আরবী হরফ লিখি, সাথে শিখি দুইটা করে শব্দ (বই) " />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
@@ -20,6 +20,7 @@ import {
   links={[
     { url: '/', name: 'নীড়পাতা' },
     { url: '/study-materials/', name: 'শিক্ষাপোকরণ' },
+    { url: '/study-materials/arabic', name: 'আরবী' },
   ]}
 />
 <Divider />
@@ -30,7 +31,7 @@ import {
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/file/d/1N0UdMjFIqOYgtKVkIRGrCvSFH1jqgSLp/view?usp=sharing"
+    href="https://drive.google.com/file/d/1zyTWZgfoMw1GIVxsAT62ZM6MXCdjr0sk/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
