--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
@@ -6,11 +6,9 @@ import {
   SEO,
   Text,
   BookList,
-  Button,
-  Video,
-} from '../../views/components';
+} from '../../../views/components';
 
-<SEO pageTitle="বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি" />
+<SEO pageTitle="বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি (প্রেসেন্টেশন)" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
 <Text variant="h2" textAlign="center">
@@ -21,6 +19,7 @@ import {
   links={[
     { url: '/', name: 'নীড়পাতা' },
     { url: '/study-materials/', name: 'শিক্ষাপোকরণ' },
+    { url: '/study-materials/bengali', name: 'বাংলা' },
   ]}
 />
 <Divider />
@@ -31,23 +30,16 @@ import {
 
 নির্ধারিত ফি দিয়ে প্রেসেন্টেশনগুলো ডাউনলোড করতে কল বা হোয়াটস-আপ করুন এখানে: 01911-494547
 
-<Box textAlign="center">
-  <a
-    href="https://drive.google.com/drive/folders/114POcFTp1HYR4joi2mlXvn35E0QHTgOe?usp=sharing"
-    target="_blank"
-    rel="noreferrer noopener"
-  >
-    <Button variant="primary">ডাউনলোড</Button>
-  </a>
-</Box>
-
-<Video
-  videoSrcURL="https://www.youtube.com/embed/FArIDxr45jM"
-  videoTitle="কীভাবে বাচ্চাকে বাংলা পড়তে শেখাবেন"
-  frameWidth="720px"
-  frameHeight="504px"
-  width="100%"
-  my={4}
-/>
+- [১. স্বরবর্ণ ডাউনলোড](https://docs.google.com/presentation/d/1Y052Cl_wAWar5UtnC0gAoM3QcnSau95o/edit#slide=id.p1)
+- [২. ক-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1FQy91rnzn5AyGMgmxF65rw9Pma5siPrX/edit)
+- [৩. চ-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/131RIHU1X0sgZ3H5kb8kue0BsjPax5nqa/edit#slide=id.p1)
+- [৪. ট-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1F2Qb_vdM09Qs-aoJER04jBl1W5yHcpw6/edit#slide=id.p1)
+- [৫. ত-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1c2Lmt90Wv3gXae7RqK8QGo6oQzH_Lahm/edit#slide=id.p1)
+- [৬. প-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1sLoIY2rwSQOAfO2VY0Oe9tinH-kQSzre/edit#slide=id.p1)
+- [৭. য-স ডাউনলোড](https://docs.google.com/presentation/d/1XMmGLlDdb_TOYW4W6JxV89M4CE10NoKF/edit#slide=id.p1)
+- [৮. হ-য় ডাউনলোড](https://docs.google.com/presentation/d/1s0RD5pmiUitzYYjgE-XGahGWf3RQjW55/edit#slide=id.p1)
+- [৯. ৎ - ঁ ডাউনলোড](https://docs.google.com/presentation/d/14NKa_DaWGaBkj3lZm85z_ws7lA_jSdbk/edit#slide=id.p1)
+- [১০. কার ও শব্দ গঠন - আকার-ঊকার ডাউনলোড](https://docs.google.com/presentation/d/1DAxNRrA6QM56AJ1Bf07ngBu24zHhmZP-/edit#slide=id.p1)
+- [১১. কার ও শব্দ গঠন - ঋকার-ঔকার ডাউনলোড](https://docs.google.com/presentation/d/1JV4vbgC6sOVAoWmOtgIRdvxXhpEGEbnP/edit#slide=id.p1)
 
 </Box>
