feat: add new images

--- a/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
+++ b/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
@@ -46,5 +46,7 @@ import {
 - [প্রাণী বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1pblm2w3Cq9yK_Cmeo3Ye9AUcUjXCxoFW/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [পাখি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1nA7gLLP_nb_ZClkea2ttR5vOhAjP4g8U/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [মাছ, পোকা ও অন্যান্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1wxWCPyrVYVfAGIeyEflBkfq7AbiQfU8G/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [পোশাক ও সাজসজ্জা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1En5bqqVbenV5rmWYm3EF5-LBSdY8hK8K/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [রঙের নাম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1JHcRFtC-E-8rPnwOhlG28jrH7gpw3geP/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 
 </Box>
