feat: update contact

--- a/src/pages/finance/your-donation-to-madrassa.mdx
+++ b/src/pages/finance/your-donation-to-madrassa.mdx
@@ -20,11 +20,12 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../views/components';
 
 সাদাকাহ ফান্ড টি পরিচালিত হয়ে আসছে আপনাদের মাসিক সাদাকাহ ও বাৎসরিক যাকাত সংগ্রহ করে। আমাদের কাছে সাদাকাহ বা যাকাত প্রেরণের ঠিকানা:
 
-IBBL A/C No.: 20501910202485403 (A/C Name: Khondakar Joynal Abedin/Md. Saiful Islam, Branch Name: Mohakhali Branch, Routing No: 125263193, Swift Code: IBBLBDDH191)
-
-DBBL A/C No.: 1051020009012 (A/C Name: Faisal Imtiaz, Branch Name: MOTIJHEEL FOREIGN EXCHANGE BRANCH, Routing No: 090274309, Swift Code: DBBLBDDH105)
-
-Rocket, Bkash, Nagad No.: 013 099 143 66 (Personal)
+| Bank/Type            | Account Details                                                                                                                                                             |
+| -------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| IBBL                 | Name: Madrasatul Ilm <br /> A/C No: 20506020200185414 <br /> Branch: Agargaon/ IDB Bhaban <br /> Routing No: 125262149                                                      |
+| IBBL                 | Name: Khondakar Joynal Abedin/Md. Saiful Islam <br /> A/C No: 20501910202485403 <br /> Branch: Mohakhali Branch <br /> Routing No: 125263193 <br /> Swift Code: IBBLBDDH191 |
+| DBBL                 | Name: Faisal Imtiaz<br /> A/C No: 1051020009012 <br /> Branch: Motijheel Foreign Exchange Branch <br /> Routing No: 090274309 <br /> Swift Code: DBBLBDDH105                |
+| Rocket, Bkash, Nagad | 01309 91 43 66                                                                                                                                                              |
 
 আল্লাহ বলেন:
 
