--- a/src/pages/study-materials/english/learn-english-by-watching-pictures.mdx
+++ b/src/pages/study-materials/english/learn-english-by-watching-pictures.mdx
@@ -48,5 +48,9 @@ import {
 - [মাছ, পোকা ও অন্যান্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1wxWCPyrVYVfAGIeyEflBkfq7AbiQfU8G/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [পোশাক ও সাজসজ্জা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1En5bqqVbenV5rmWYm3EF5-LBSdY8hK8K/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [রঙের নাম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1JHcRFtC-E-8rPnwOhlG28jrH7gpw3geP/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [যানবাহন বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1uFTIM5A5lhceZYLgL2EaflWzSGXvJQ6c/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [রাস্তাঘাট বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1t0fw8VcSeMOShh1nLHxusz7aeSE7_5DE/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [শিক্ষা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1xQ6SI0L_mwTzgz-_sAUc6ciwREH_tFek/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+- [ধর্ম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1VqlY2mJwl1yxPiDu-80vqkNKxiwZ7tpr/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 
 </Box>
